[gd_scene load_steps=5 format=3 uid="uid://c5vcc4joqb2tu"]

[ext_resource type="PackedScene" uid="uid://ba7vu4lm7v3u7" path="res://base_hexagon.tscn" id="1_ndsc5"]
[ext_resource type="Script" path="res://hexes/splitter.gd" id="2_30x1b"]
[ext_resource type="Texture2D" uid="uid://cdynjnlmffrpy" path="res://Overlays/rotation_indicator_small.png" id="3_4we34"]
[ext_resource type="Texture2D" uid="uid://ch5tqqtfuq08p" path="res://Overlays/stream_out.png" id="4_phn7k"]

[node name="Splitter" instance=ExtResource("1_ndsc5")]
script = ExtResource("2_30x1b")
rot_direction = 1
in_side = 3
out_dirs = Array[bool]([true, true, true, true, true, true])

[node name="Label" type="Label" parent="." index="2"]
offset_left = -12.0
offset_top = -7.0
offset_right = 108.0
offset_bottom = 65.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Split"

[node name="RotationDir" type="TextureRect" parent="." index="3"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("3_4we34")

[node name="InArrow" type="TextureRect" parent="." index="4"]
offset_left = 160.0
offset_top = -288.0
offset_right = 660.0
offset_bottom = 289.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(-160, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")
flip_h = true

[node name="OutArrows" type="Node2D" parent="." index="5"]

[node name="OutArrow" type="TextureRect" parent="OutArrows" index="0"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")

[node name="OutArrow2" type="TextureRect" parent="OutArrows" index="1"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
rotation = -1.0472
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")

[node name="OutArrow3" type="TextureRect" parent="OutArrows" index="2"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
rotation = -2.0944
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")

[node name="OutArrow4" type="TextureRect" parent="OutArrows" index="3"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
rotation = -3.14159
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")

[node name="OutArrow5" type="TextureRect" parent="OutArrows" index="4"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
rotation = -4.18879
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")

[node name="OutArrow6" type="TextureRect" parent="OutArrows" index="5"]
offset_left = -250.0
offset_top = -288.0
offset_right = 250.0
offset_bottom = 289.0
rotation = -5.23599
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(250, 288)
mouse_filter = 2
texture = ExtResource("4_phn7k")
